--- a/docs/source/_tex/coma.tex
+++ b/docs/source/_tex/coma.tex
@@ -32,11 +32,11 @@
         \For{ a number of episodes}:
             \State $current\_episode = \{ \}$ 
                 \While{ $\mathbf{o}_t$ is not $done$}
-                \State Collect observations $\{o^t_1,\dots,o^t_n\}$ and state $\mathbf{s}_t$
+                \State Collect observations $\{o^t_1,\dots,o^t_n\}$ and state $\mathbf{s}^t$
                 \State  Sample an action $a_i^t \sim \pi_i(.|o_i^t)$ for each agent $i$
                 \State Execute joint action $\mathbf{a}^t = (a_1^t,\dots,a_n^t)$
                 \State Collect $r^t$, $done^t$
-                \State Store $(\mathbf{o}^t,\mathbf{a}^t,r^t,done^t,\mathbf{o}^{t+1})$ in $current\_episode$
+                \State Store $(\mathbf{s}^t,\mathbf{o}^t,\mathbf{a}^t,r^t,done^t,\mathbf{o}^{t+1})$ in $current\_episode$
                 \EndWhile
             \State Store $current\_episode$ in the rollout buffer $\mathcal{D}$
         \EndFor
